# KeplerProject

./: README.md  docker-compose.yml  project-outline.md  temp.txt  todo.md
Backend/: .gitignore  Dockerfile  database.sqlite3  requirements.txt  requirements_old.txt  run.py  settings.py
Backend/.mypy_cache/3.6/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  random.data.json  random.meta.json  string.data.json  string.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
Backend/.mypy_cache/3.6/collections/: __init__.data.json  (+3 more)
Backend/app/: app.py
Backend/data/: database.py  models.py  pyproject.toml  schema.py  utils.py
Backend/data/tests/: database.sqlite3  test_mutation.py  test_query.py
Backend/data/tests/snapshots/: snap_test_mutation.py  snap_test_query.py
Backend/database/: database.py  models.py
Backend/graphqlSchema/: schema.py
Frontend/: .gitignore  Dockerfile  package.json
Frontend/src/: index.js
Frontend/src/components/: App.js  App_cp.js  PlayGame.js  Player.js  PlayerList.js  Register.js  Score.js  Timer.js  TopScore.js  UserList.js  WordList.js
Frontend/src/styles/: App.css
Frontend/typefast/: package-lock.json  package.json
Frontend/typefast/src/: index.js
(+29 files in other folders)
